// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`!leaderboard callback returns correct output 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 2`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 3`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 4`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 5`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 6`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 7`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 8`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 9`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 10`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
3 - user102 [998 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 11`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 12`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "3 - user102 [998 points] 
4 - user103 [997 points] 
5 - user104 [996 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 13`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "1 - user100 [1000 points] :tada: 
2 - user101 [999 points] 
",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 14`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 15`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;

exports[`!leaderboard callback returns correct output 16`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "fields": [
        {
          "name": "In Odin We Trust",
          "value": "Be the first to earn a point!",
        },
      ],
      "title": "Leaderboard",
    },
  ],
}
`;
